# mcf-rag-chatbot

./: .gitignore  MVP.md  README.md  docker-compose.yaml  eda.ipynb  pyproject.toml
ragbit/: pyproject.toml
src/mcf_rag_chatbot/: docker-compose.yaml
src/mcf_rag_chatbot/backend/: Dockerfile  __init__.py  api.py  constants.py  data_models.py  database.py  faq.py  ingestion.py  pyproject.toml  rag.py
src/mcf_rag_chatbot/frontend/: Dockerfile  app.py  pyproject.toml  style.css  ui.py
src/mcf_rag_chatbot/frontend/pages/: chatbot.py  shelter.py  shelters.py
src/mcf_rag_chatbot/mcf_content.lance/_transactions/: 0-36711277-a9c0-49d5-8cf9-b6f319c85693.txn  1-b652baeb-d5a4-4978-8227-a4a481a81956.txn  10-3ec6ec4b-cb5e-4e7c-a25d-39c31808f725.txn  11-ad273bc8-256c-4fb4-b158-6d5fc15a0abf.txn  12-92fcbd66-543b-476e-bb57-55b8488c44f7.txn  13-693ca327-371d-4703-8016-18b329e2bcff.txn  14-7d5555df-36c2-40a9-8a2b-852f5c53c9da.txn  15-d68a889a-8c04-42cb-bdd5-3557854b4c58.txn  16-f934986c-10ca-4ec9-a15c-46fcc29ba4d0.txn  17-ab2cd6ec-4444-4e00-b752-e69566da0a0b.txn  18-fd6153a7-efdf-4771-829b-c74bfb1f61dc.txn  19-b83d4106-856d-40d4-8d19-60cf8320677f.txn  2-b68b1514-ee10-451d-96c2-bf00906adcfd.txn  3-b7ca670f-c76f-47bf-a5c3-8ff2e80abe3b.txn  4-c4c229c9-7df9-4d09-afa5-ee60034abb42.txn  5-c1a056d6-935b-4627-a54c-80ab2101f1f5.txn  6-65c5eb41-18a3-4708-938c-cb52e96e26d0.txn  7-d2380d7d-04fe-4bbd-b706-c352d8c1dff9.txn  8-620d72cd-bc83-4524-bf99-7169798b84a9.txn  9-ce70bc6b-85d6-4441-852b-a6b8babb7287.txn
src/mcf_rag_chatbot/utils/: constants.py
src/mcf_rag_chatbot/webscraper/: Dockerfile  constants.py  crawler.py  mcf_scraper.py  models.py  pyproject.toml  utils.py
webscraper/: crawler.py
webscraper/data/: dev_docs.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_beredskap-for-dina-husdjur.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_betalningar-och-kontanter-i-kris.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_extra-stod.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_extra-stod_blinda-och-synnedsattning.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_extra-stod_dova-och-horselskadade.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_extra-stod_for-dig-med--if-intellektuell-funktionsnedsattning.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_extra-stod_rorelsehindrad.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_grunder-i-hemberedskap.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_kurser-och-forelasningar-om-hemberedskap.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_mat.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_mat_att-odla-sjalv.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_mat_tillgang-till-mat-i-kris.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_medicin-for-en-manad-hemma.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_tillgang-till-kommunikation-i-kris.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_tillgang-till-varme-i-kris.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_vatten.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_vatten_hygien-tvatt-och-toalett.json  sv_rad-till-privatpersoner_hemberedskap---preppa-for-en-vecka_vatten_tillgang-till-vatten-i-kris.json
