[project]
name = "mcf_rag_chatbot"
version = "0.1.0"
description = "packaging mcf_rag_chatbot and using uv workspaces"
readme = "README.md"
authors = [
    { name = "Casper Zanichell", email = "casperzanichelli98@gmail.com" }
]
requires-python = ">=3.11"

dependencies = ["backend", "frontend", "webscraper"]

[tool.uv.sources]
backend = {workspace = true}
frontend = {workspace = true}
webscraper = {workspace = true}

[tool.uv.workspace]
members = ["src/mcf_rag_chatbot/frontend", "src/mcf_rag_chatbot/backend", "src/mcf_rag_chatbot/webscraper"]



