[project]
name = "ragbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Casper Zanichell", email = "casperzanichelli98@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ragbit = "ragbit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
