[project]
name = "backend"
version = "0.1.0"
description = "backend for mcf_rag_chatbot"
requires-python = ">=3.11"

dependencies = [
    "lancedb",
    "pydantic-ai",
    "fastapi",
    "uvicorn",
    "google-genai",
    "google-generativeai",
    "pydantic",
    "langchain_text_splitters",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "../../"} 

[tool.setuptools.packages.find]
where = ["../../src"]    
include = ["mcf_rag_chatbot.backend"]




